# android-terminal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: agent-tool-use.md
scripts/: agent-check.sh
sidecar/gradle-agent/: build.gradle.kts  settings.gradle.kts
sidecar/gradle-agent/src/main/kotlin/sh/droidscope/agent/: Agent.kt
src/: app.rs  app_control.rs  app_control_ui.rs  app_data.rs  app_data_ui.rs  cli.rs  clipboard.rs  command_palette.rs  config.rs  device_actions.rs  device_actions_ui.rs  device_tools.rs  device_tools_ui.rs  devices_ui.rs  dispatch.rs  emulator_picker.rs  files.rs  files_ui.rs  fps.rs  fps_ui.rs  gradle.rs  gradle_ui.rs  intents.rs  intents_ui.rs  issues.rs  issues_ui.rs  keymap.rs  layout.rs  logcat.rs  logcat_ui.rs  main.rs  manifest.rs  manifest_ui.rs  monitor.rs  monitor_ui.rs  network_ui.rs  panel.rs  perf.rs  perf_ui.rs  processes.rs  (+6 more)
src/adb/: devices.rs  logcat.rs  mod.rs
