[package]
name = "droidscope"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A customizable terminal UI for Android developers with live Gradle task monitoring"
license = "MIT"
repository = "https://github.com/tvealot/android-terminal"
keywords = ["android", "adb", "tui", "gradle", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
regex = "1"
portable-pty = "0.8"
vt100 = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
